...
        SettingsChoice("light", stringResource(R.string.pref_theme_light)),
        SettingsChoice("dark", stringResource(R.string.pref_theme_night)),
        SettingsChoice("auto-time", stringResource(R.string.pref_theme_auto_time)),
    )
    val languages = listOf(
        SettingsChoice("", stringResource(R.string.pref_theme_system)),
        SettingsChoice("en", "English"),
        SettingsChoice("id", "Indonesia"),
    )
    val cameraDevices = listOf(
        SettingsChoice("auto", stringResource(R.string.camera_default_device_auto)),
        SettingsChoice("rear", stringResource(R.string.camera_default_device_rear)),
        SettingsChoice("front", stringResource(R.string.camera_default_device_front)),
...
